--- a/index.htm
+++ b/index.htm
@@ -519,10 +519,10 @@
 		<section style="width:100%;">
 			<div class="grid grid12_20_wifi pt-10">			
 				<div class="labelText rdLeft s6 alignLeft pl-10" id="text40">--:</div>
-				<input type="date" id="input40" class="rdRight s6">		
+				<input type="date" id="input40" class="rdRight s6" style="width:99%;">		
 				
 				<div class="labelText rdLeft s6 alignLeft pl-10" id="text41">--:</div>
-				<input type="time" id="input41" class="rdRight s6">						
+				<input type="time" id="input41" class="rdRight s6" style="width:99%;">						
 				
 				<div class="labelText rdLeft s6 alignLeft pl-10" id="text42">--[GMT+]:</div>
 				<input type="text" id="input42" class="rdRight s6 alignRight pr-10" placeholder="час пояс GMT+">	
