--- a/index.htm
+++ b/index.htm
@@ -285,7 +285,7 @@
 
 
 				<div class="labelText alignLeft pl-10 s5" id="text210">--:</div>			
-				<input type="time" id="input20" class="rdRight pl-5 s5" step="1">	
+				<input type="time" id="input20" class="rdRight alignRight pl-5 s5" step="1"  style="width:99%;">	
 				
 				<div class="labelText alignLeft pl-10 s5" id="text220">--:</div>	
 				<input id="input21" class="rdRight alignRight pr-10 s5" list="input21List" onclick="inputIdPrevValue=value; value='';" onfocusout="if (value == '') value = inputIdPrevValue;" onchange="inputIdPrevValue=value;" min="1" placeholder="[мин]">				
@@ -306,7 +306,7 @@
 
 
 				<div class="labelText alignLeft pl-10 s5" id="text211">--:</div>			
-				<input type="time" id="input23" class="rdRight pl-5 s5" step="1">	
+				<input type="time" id="input23" class="rdRight alignRight pl-5 s5" step="1">	
 				
 				<div class="labelText alignLeft pl-10 s5" id="text221">--:</div>	
 				<input id="input24" class="rdRight alignRight pr-10 s5" list="input24List" onclick="inputIdPrevValue=value; value='';" onfocusout="if (value == '') value = inputIdPrevValue;" onchange="inputIdPrevValue=value;" min="1" placeholder="[мин]">				
