--- a/index.htm
+++ b/index.htm
@@ -151,10 +151,10 @@
 <!--  ------------------------------------------- PWM 1 -------------------------------------------- -->					
 				<div class="labelText rdLeft alignLeft pl-10" id="text10" style="grid-row:1/4; grid-column: 1/3;">--:</div>
 				<div class="labelText alignLeft pl-5 s2" id="text110">--:</div>
-				<input type="time" id="input10" class="alignLeft pl-5 s3" step="1">	
+				<input type="time" id="input10" class="alignLeft s3" step="1">	
 				
-				<div class="labelText alignLeft pl-10 s2" id="text120">--:</div>
-				<input type="time" id="input11" class="alignLeft rdRight pl-5 s3" step="1">
+				<div class="labelText alignLeft s2" id="text120">--:</div>
+				<input type="time" id="input11" class="alignLeft rdRight s3" step="1">
 				
 				<div class="labelText alignLeft pl-5 s2" id="text130">--:</div>
 				<input type="number" id="input12" class="alignRight pr-10 s3" step="1" min="1" placeholder="Длительность[мин]">	
