--- a/index.htm
+++ b/index.htm
@@ -285,7 +285,7 @@
 
 
 				<div class="labelText alignLeft pl-10 s5" id="text210">--:</div>			
-				<input type="time" id="input20" class="rdRight alignRight s5" step="1">	
+				<input type="time" id="input20" class="s5 rdRight alignRight" step="1">	
 				
 				<div class="labelText alignLeft pl-10 s5" id="text220">--:</div>	
 				<input id="input21" class="rdRight alignRight pr-10 s5" list="input21List" onclick="inputIdPrevValue=value; value='';" onfocusout="if (value == '') value = inputIdPrevValue;" onchange="inputIdPrevValue=value;" min="1" placeholder="[мин]">				
