--- a/index.htm
+++ b/index.htm
@@ -675,10 +675,10 @@
 		<section>
 			<div class="grid grid12_20_wifi pt-10">			
 				<textarea class="editText rdLeft s6" id="text40" readonly></textarea>	
-				<input type="date" id="wifi0" class="rdRight s6">		
+				<input type="date" id="wifi0" class="rdRight s6" style="width:100%">		
 				
 				<textarea class="editText rdLeft s6" id="text41" readonly></textarea>	
-				<input type="time" id="wifi1" class="rdRight s6">						
+				<input type="time" id="wifi1" class="rdRight s6" style="width:100%">						
 				
 				<textarea class="editText rdLeft s6" id="text42" readonly></textarea>	
 				<input type="text" id="wifi2" class="rdRight s6 pr-15" placeholder="час пояс GMT+">	
